WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39281
[DRT/Chromium] Fix some initialization/reset issues
https://bugs.webkit.org/show_bug.cgi?id=39281
Summary
[DRT/Chromium] Fix some initialization/reset issues
Kent Tamura
Reported
2010-05-18 03:32:20 PDT
[DRT/Chromium] Fix some initialization/reset issues
Attachments
Patch
(3.22 KB, patch)
2010-05-18 03:34 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2010-05-18 03:34:36 PDT
Created
attachment 56352
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2010-05-18 07:20:58 PDT
Comment on
attachment 56352
[details]
Patch r=me.
Kent Tamura
Comment 3
2010-05-18 19:59:24 PDT
Comment on
attachment 56352
[details]
Patch Clearing flags on attachment: 56352 Committed
r59737
: <
http://trac.webkit.org/changeset/59737
>
Kent Tamura
Comment 4
2010-05-18 19:59:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug