WebKitTools/DumpRenderTree/chromium/LayoutTestController.h
@@ -331,7 +331,7 @@ private:
     // queueScript.
     class WorkQueue {
     public:
-        WorkQueue(LayoutTestController* controller) : m_controller(controller) {}
+        WorkQueue(LayoutTestController* controller) : m_frozen(false), m_controller(controller) {}
         virtual ~WorkQueue();
         void processWorkSoon();
 
@@ -440,10 +440,6 @@ private:
 
     // If true, don't dump output until notifyDone is called.
     bool m_waitUntilDone;
-
-    // To prevent infinite loops, only the first page of a test can add to a
-    // work queue (since we may well come back to that same page).
-    bool m_workQueueFrozen;
 
     WorkQueue m_workQueue;
 
